--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "keywords": [],
@@ -13,12 +13,23 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
+    "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.0.5",
     "css-loader": "^2.1.0",
+    "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.5.3",
+    "postcss-advanced-variables": "^3.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-inline-comment": "^3.0.0",
+    "postcss-inline-svg": "^3.1.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.1",
+    "postcss-rgb": "^1.0.0",
+    "postcss-scss": "^2.0.0",
+    "postcss-svgo": "^4.0.2",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
     "vue-loader": "^15.6.4",
@@ -31,6 +42,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "pug": "^2.0.3"
   }
 }
