--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
+    "apply-loader": "^2.0.0",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.0.5",
@@ -32,6 +33,9 @@
     "postcss-svgo": "^4.0.2",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
+    "svg-sprite-loader": "^4.1.3",
+    "svg-transform-loader": "^2.0.7",
+    "svgo-loader": "^2.2.0",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^4.29.5",
