--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss-inline-svg": "^3.1.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.1",
+    "postcss-pxtorem": "^4.0.1",
     "postcss-rgb": "^1.0.0",
     "postcss-scss": "^2.0.0",
     "postcss-svgo": "^4.0.2",
