--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "svg-sprite-loader": "^4.1.3",
     "svg-transform-loader": "^2.0.7",
     "svgo-loader": "^2.2.0",
+    "vue": "^2.6.7",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^4.29.5",
