--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "svgo-loader": "^2.2.0",
     "vue": "^2.6.7",
     "vue-loader": "^15.6.4",
-    "vue-template-compiler": "^2.4.4",
+    "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0"
@@ -49,6 +49,7 @@
   ],
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "vue-flickity": "^1.1.2"
   }
 }
