--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   ],
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "pug": "^2.0.3",
-    "vue-flickity": "^1.1.2"
+    "pug": "^2.0.3"
   }
 }
