--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-scss": "^2.0.0",
     "postcss-svgo": "^4.0.2",
     "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
     "svg-transform-loader": "^2.0.7",
