--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.3.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "apply-loader": "^2.0.0",
     "autoprefixer": "^9.4.8",
@@ -50,6 +51,7 @@
   ],
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "vue-router": "^3.0.2"
   }
 }
