--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "webpack-dev-server --mode=development --hot",
+    "build": "rm -rf dist && cross-env NODE_ENV=production webpack --mode=production --progress --hide-modules"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,6 @@
     "@babel/core": "^7.3.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "apply-loader": "^2.0.0",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
     "cross-env": "^5.0.5",
@@ -22,7 +21,8 @@
     "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.5.3",
+    "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-advanced-variables": "^3.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-inline-comment": "^3.0.0",
@@ -35,11 +35,10 @@
     "postcss-svgo": "^4.0.2",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.3",
     "svg-transform-loader": "^2.0.7",
     "svgo-loader": "^2.2.0",
-    "vue": "^2.6.7",
+    "terser-webpack-plugin": "^1.2.3",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.5",
@@ -50,6 +49,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "vue": "^2.6.7",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.3",
     "vue-router": "^3.0.2"
