--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
@@ -49,9 +50,11 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.3",
     "vue": "^2.6.7",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   }
 }
