--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-advanced-variables": "^3.0.0",
+    "postcss-atroot": "^0.1.3",
+    "postcss-each": "^0.10.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-inline-svg": "^3.1.1",
     "postcss-loader": "^3.0.0",
