--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "axios": "^0.18.0",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.3",
+    "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.7",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
