--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode=development --hot",
-    "build": "rm -rf docs && webpack --mode=production --progress"
+    "build": "rm -rf docs && webpack --mode=production --progress",
+    "count": "cloc src/"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
+    "cloc": "^2.4.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
