--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode=development --hot",
-    "build": "rm -rf docs && webpack --mode=production --progress",
+    "build": "webpack --mode=production --progress",
     "count": "cloc src/"
   },
   "keywords": [],
@@ -18,9 +18,11 @@
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^2.0.1",
     "cloc": "^2.4.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
+    "dotenv-webpack": "^1.7.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
