--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode=development --hot",
-    "build": "webpack --mode=production --progress",
+    "build": "rm -rf docs && webpack --mode=production --progress",
     "count": "cloc src/"
   },
   "keywords": [],
